--- a/style.css
+++ b/style.css
@@ -1,7 +1,123 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap');
+
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
+body {
+  font-family: 'Lato', sans-serif;
+  transition: .2s;
+}
+
 .container {
-  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  margin: 0 10px;
+}
+
+.keyboard-wrapper {
+  max-width: 1008px;
+  width: 100%;
+  background-color: #e7e7e7;
+  overflow: hidden;
+  position: relative;
+  overflow: hidden;
+  order: 2;
+}
+
+.row {
+  display: flex;
+}
+
+.keys {
+  width: 60px;
+  height: 60px;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 4px;
+  transition: .2s;
+  z-index: 5;
+}
+
+.backspace-key {
+  width: 120px;
+}
+
+.tab-key {
+  width: 90px;
+}
+
+.slash-key {
+  width: 90px;
+}
+
+.capslock-key {
+  width: 128px;
+}
+
+.enter-key {
+  width: 120px;
+}
+
+.shift-key {
+  width: 124px;
+}
+
+.space-key {
+  max-width: 600px;
+  width: 100%;
+}
+
+.text {
+  max-width: 1008px;
+  width: 100%;
+  height: 90px;
+  margin-bottom: 30px;
+  border: none;
+  outline: none;
+  font-size: 26px;
+  background-color: #f7f7f7;
+  padding-left: 10px;
+  transition: .2s;
+}
+
+.keys.active {
+  background-color: #333;
+  color: #fff;
+}
+
+.keys.remove {
+  animation: keys_animation 0.5s forwards;
+}
+
+@keyframes keys_animation {
+  0% {
+    background-color: #333;
+    color: #fff;
+  }
+
+  100% {
+    background-color: #fff;
+    color: #000;
+  }
+}
+
+body.active {
+  background-color: rgb(54, 54, 54);
+}
+
+.keyboard-wrapper.active {
+  background-color: #585858;
+}
+
+.text.active {
+  background-color: #2b2b2b;
+  color: #fff;
 }
